// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Design System/TopNavBar Playground smoke-test 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  background-color: white;
  height: 3.875rem;
  padding: 0 1rem;
  box-shadow: 0px 4px 8px rgba(16, 48, 102, 0.07);
}

.emotion-2>*:not(:last-of-type) {
  color: #0f0f17;
}

.emotion-3 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-4 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: transparent;
  margin: 1rem 1.5rem 1rem 1rem;
  border-radius: 0.25rem;
  max-width: 25rem;
}

.emotion-5 {
  margin: auto;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: default;
}

.emotion-6 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  margin: 0 1rem;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.emotion-7 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-8 {
  position: relative;
  display: inline-block;
}

.emotion-9 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-10 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #1552DD;
  background-color: rgba(84,94,255,0);
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-10:focus-visible:not(:disabled) {
  background-color: rgba(84,94,255,0.06);
}

.emotion-10:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-10:hover:not(:disabled) {
  background-color: rgba(84,94,255,0.06);
}

.emotion-10:active:not(:disabled) {
  background-color: rgba(84,94,255,0.14);
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 0.5rem;
}

.emotion-12 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1.25rem;
  height: 1.25rem;
  border-radius: 6.25rem;
  border: 0.0625rem solid;
  border-color: #b9cdfc;
  box-sizing: border-box;
  background-color: #e7eefe;
  color: #1249C4;
  overflow: hidden;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-family: Roboto;
  font-weight: 500;
  line-height: 0.875rem;
  font-size: 0.625rem;
  letter-spacing: 0.00625rem;
}

.emotion-12 img {
  border-radius: 6.25rem;
  width: 100%;
  height: 100%;
}

.emotion-13 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-14 {
  fill: #1249C4;
  width: 1rem;
  height: 1rem;
}

.emotion-14 path {
  fill: #1249C4;
}

.emotion-15 {
  font-weight: 500;
}

.emotion-17 {
  fill: #1552DD;
  width: 1rem;
  height: 1rem;
}

.emotion-17 path {
  fill: #1552DD;
}

<html>
  <head />
  <body>
    <span
      class="emotion-0"
    >
      <span
        class="emotion-1"
      >
        <div
          style="padding: 10px;"
        >
          <div
            aria-label="Top Application Banner"
            class="emotion-2"
            role="banner"
          >
            <div
              class="emotion-3"
            >
              <div
                class="emotion-4"
              >
                <div
                  class="emotion-5"
                >
                  <strong>
                    LOGO
                  </strong>
                  PLACEHOLDER
                </div>
              </div>
            </div>
            <div
              class="emotion-6"
            />
            <div
              class="emotion-7"
            >
              <div>
                <div
                  class="emotion-8"
                  data-testid="userMenu"
                >
                  <div
                    class="emotion-9"
                  >
                    <button
                      class="emotion-10"
                      data-testid="button"
                      type="button"
                    >
                      <span
                        class="emotion-11"
                      >
                        <div
                          class="emotion-12"
                          data-testid="_avatar"
                        >
                          <span
                            class="emotion-13"
                          >
                            <svg
                              class="emotion-14"
                              fill="none"
                              viewBox="0 0 14 17"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M6.96625 6.55647C8.77677 6.55647 10.2445 5.08876 10.2445 3.27824C10.2445 1.46772 8.77677 0 6.96625 0C5.15573 0 3.68801 1.46772 3.68801 3.27824C3.68801 5.08876 5.15573 6.55647 6.96625 6.55647Z"
                                fill="#54587F"
                              />
                              <path
                                d="M0 12.2113C0 12.1401 0.0171683 12.0699 0.0515269 12.0076C1.31285 9.7198 3.95046 8.09435 7 8.09435C10.0495 8.09435 12.6872 9.7198 13.9485 12.0076C13.9828 12.0699 14 12.1401 14 12.2113C14 12.2824 13.9828 12.3528 13.9483 12.4151C12.687 14.6941 10.0518 16.0044 7.00244 16.0044C3.95304 16.0044 1.31314 14.6941 0.0516988 12.4151C0.0172363 12.3528 0 12.2824 0 12.2113Z"
                                fill="#54587F"
                              />
                            </svg>
                          </span>
                        </div>
                        <span>
                          <span>
                            <span
                              class="emotion-15"
                            />
                          </span>
                        </span>
                        <span
                          class="emotion-13"
                        >
                          <svg
                            class="emotion-17"
                            viewBox="0 0 24 24"
                            xmlns="http://www.w3.org/2000/svg"
                            xmlns:xlink="http://www.w3.org/1999/xlink"
                          >
                            <g
                              fill="none"
                              fill-rule="evenodd"
                              id="\\uD83D\\uDD36-Symbols"
                              stroke="none"
                              stroke-width="1"
                            >
                              <g
                                id="Chevron_Large_Down"
                              >
                                <path
                                  d="M15.1900068,4.62555888 L16.6042204,6.03977245 L10.2398322,12.4035589 L16.6042204,18.7678394 L15.1900068,20.182053 L7.41183221,12.4038784 L15.1900068,4.62555888 Z"
                                  transform="translate(12.008026, 12.403806) scale(-1, 1) rotate(-90.000000) translate(-12.008026, -12.403806)"
                                />
                              </g>
                            </g>
                          </svg>
                        </span>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </span>
    </span>
  </body>
</html>
`;

exports[`Design System/TopNavBar WithAdditionalTools smoke-test 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  background-color: white;
  height: 3.875rem;
  padding: 0 1rem;
  box-shadow: 0px 4px 8px rgba(16, 48, 102, 0.07);
}

.emotion-2>*:not(:last-of-type) {
  color: #0f0f17;
}

.emotion-3 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-4 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: transparent;
  margin: 1rem 1.5rem 1rem 1rem;
  border-radius: 0.25rem;
  max-width: 25rem;
}

.emotion-5 {
  margin: auto;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: default;
}

.emotion-6 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  margin: 0 1rem;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.0625rem #b9cdfc;
  border-radius: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 1;
  cursor: text;
  height: 3.25rem;
  min-width: 8.75rem;
  background-color: #ffffff;
}

.emotion-7:hover {
  background-color: #F5F5FF;
}

.emotion-7:focus-within {
  box-shadow: 0 0 0 0.125rem #175bf5;
  background-color: #F5F5FF;
}

.emotion-8 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
  padding: 0 0 0 0.75rem;
  padding-right: 0.75rem;
}

.emotion-8>div {
  position: relative;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-10 {
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  background: transparent;
  border: none;
  color: #1B214F;
  padding: 0;
  display: block;
  position: relative;
  top: 0.4375rem;
  z-index: 1;
  text-overflow: ellipsis;
  width: 0;
  min-width: 100%;
}

.emotion-10::-webkit-input-placeholder {
  color: transparent;
}

.emotion-10::-moz-placeholder {
  color: transparent;
}

.emotion-10:-ms-input-placeholder {
  color: transparent;
}

.emotion-10::placeholder {
  color: transparent;
}

.emotion-10:focus {
  outline: none;
}

.emotion-10:focus::-webkit-input-placeholder {
  color: transparent;
}

.emotion-10:focus::-moz-placeholder {
  color: transparent;
}

.emotion-10:focus:-ms-input-placeholder {
  color: transparent;
}

.emotion-10:focus::placeholder {
  color: transparent;
}

.emotion-10:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-10:focus-within+label,
.emotion-10:not(:placeholder-shown)+label {
  font-weight: 700!important;
  -webkit-transform: translate(0.1875rem, -35%) scale(0.8);
  -moz-transform: translate(0.1875rem, -35%) scale(0.8);
  -ms-transform: translate(0.1875rem, -35%) scale(0.8);
  transform: translate(0.1875rem, -35%) scale(0.8);
}

.emotion-10:focus-within+label {
  color: #1552DD;
}

.emotion-10:disabled {
  cursor: not-allowed;
}

.emotion-11 {
  -webkit-transition: -webkit-transform 0.25s,opacity 0.25s ease-in-out;
  transition: transform 0.25s,opacity 0.25s ease-in-out;
  transform-origin: 0 0;
  width: 100%;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transform: translate(0.1875rem, 0);
  -moz-transform: translate(0.1875rem, 0);
  -ms-transform: translate(0.1875rem, 0);
  transform: translate(0.1875rem, 0);
  color: #686BB3;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  top: 0;
  bottom: 0;
  right: 0.1875rem;
  margin: auto;
  white-space: nowrap;
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
}

.emotion-22 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-23 {
  position: relative;
  display: inline-block;
}

.emotion-24 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-25 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #1552DD;
  background-color: rgba(84,94,255,0);
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-25:focus-visible:not(:disabled) {
  background-color: rgba(84,94,255,0.06);
}

.emotion-25:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-25:hover:not(:disabled) {
  background-color: rgba(84,94,255,0.06);
}

.emotion-25:active:not(:disabled) {
  background-color: rgba(84,94,255,0.14);
}

.emotion-26 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 0.5rem;
}

.emotion-27 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1.25rem;
  height: 1.25rem;
  border-radius: 6.25rem;
  border: 0.0625rem solid;
  border-color: #b9cdfc;
  box-sizing: border-box;
  background-color: #e7eefe;
  color: #1249C4;
  overflow: hidden;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-family: Roboto;
  font-weight: 500;
  line-height: 0.875rem;
  font-size: 0.625rem;
  letter-spacing: 0.00625rem;
}

.emotion-27 img {
  border-radius: 6.25rem;
  width: 100%;
  height: 100%;
}

.emotion-28 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-29 {
  fill: #1249C4;
  width: 1rem;
  height: 1rem;
}

.emotion-29 path {
  fill: #1249C4;
}

.emotion-30 {
  font-weight: 500;
}

.emotion-32 {
  fill: #1552DD;
  width: 1rem;
  height: 1rem;
}

.emotion-32 path {
  fill: #1552DD;
}

<html>
  <head />
  <body>
    <span
      class="emotion-0"
    >
      <span
        class="emotion-1"
      >
        <div
          style="padding: 10px;"
        >
          <div
            aria-label="Top Application Banner"
            class="emotion-2"
            role="banner"
          >
            <div
              class="emotion-3"
            >
              <div
                class="emotion-4"
              >
                <div
                  class="emotion-5"
                >
                  <strong>
                    LOGO
                  </strong>
                  PLACEHOLDER
                </div>
              </div>
            </div>
            <div
              class="emotion-6"
            >
              <div>
                <div
                  class="emotion-7"
                >
                  <div
                    class="emotion-8"
                  >
                    <div
                      class="emotion-9"
                    >
                      <input
                        aria-invalid="false"
                        class="emotion-10"
                        data-testid="input"
                        id="textfield_1"
                        placeholder="Label"
                      />
                      <label
                        class="emotion-11"
                        for="textfield_1"
                      >
                        Label 
                      </label>
                    </div>
                  </div>
                </div>
              </div>
              <div>
                <div
                  class="emotion-7"
                >
                  <div
                    class="emotion-8"
                  >
                    <div
                      class="emotion-9"
                    >
                      <input
                        aria-invalid="false"
                        class="emotion-10"
                        data-testid="input"
                        id="textfield_2"
                        placeholder="Label"
                      />
                      <label
                        class="emotion-11"
                        for="textfield_2"
                      >
                        Label 
                      </label>
                    </div>
                  </div>
                </div>
              </div>
              <div>
                <div
                  class="emotion-7"
                >
                  <div
                    class="emotion-8"
                  >
                    <div
                      class="emotion-9"
                    >
                      <input
                        aria-invalid="false"
                        class="emotion-10"
                        data-testid="input"
                        id="textfield_3"
                        placeholder="Label"
                      />
                      <label
                        class="emotion-11"
                        for="textfield_3"
                      >
                        Label 
                      </label>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="emotion-22"
            >
              <div>
                <div
                  class="emotion-23"
                  data-testid="userMenu"
                >
                  <div
                    class="emotion-24"
                  >
                    <button
                      class="emotion-25"
                      data-testid="button"
                      type="button"
                    >
                      <span
                        class="emotion-26"
                      >
                        <div
                          class="emotion-27"
                          data-testid="_avatar"
                        >
                          <span
                            class="emotion-28"
                          >
                            <svg
                              class="emotion-29"
                              fill="none"
                              viewBox="0 0 14 17"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M6.96625 6.55647C8.77677 6.55647 10.2445 5.08876 10.2445 3.27824C10.2445 1.46772 8.77677 0 6.96625 0C5.15573 0 3.68801 1.46772 3.68801 3.27824C3.68801 5.08876 5.15573 6.55647 6.96625 6.55647Z"
                                fill="#54587F"
                              />
                              <path
                                d="M0 12.2113C0 12.1401 0.0171683 12.0699 0.0515269 12.0076C1.31285 9.7198 3.95046 8.09435 7 8.09435C10.0495 8.09435 12.6872 9.7198 13.9485 12.0076C13.9828 12.0699 14 12.1401 14 12.2113C14 12.2824 13.9828 12.3528 13.9483 12.4151C12.687 14.6941 10.0518 16.0044 7.00244 16.0044C3.95304 16.0044 1.31314 14.6941 0.0516988 12.4151C0.0172363 12.3528 0 12.2824 0 12.2113Z"
                                fill="#54587F"
                              />
                            </svg>
                          </span>
                        </div>
                        <span>
                          <span>
                            <span
                              class="emotion-30"
                            />
                          </span>
                        </span>
                        <span
                          class="emotion-28"
                        >
                          <svg
                            class="emotion-32"
                            viewBox="0 0 24 24"
                            xmlns="http://www.w3.org/2000/svg"
                            xmlns:xlink="http://www.w3.org/1999/xlink"
                          >
                            <g
                              fill="none"
                              fill-rule="evenodd"
                              id="\\uD83D\\uDD36-Symbols"
                              stroke="none"
                              stroke-width="1"
                            >
                              <g
                                id="Chevron_Large_Down"
                              >
                                <path
                                  d="M15.1900068,4.62555888 L16.6042204,6.03977245 L10.2398322,12.4035589 L16.6042204,18.7678394 L15.1900068,20.182053 L7.41183221,12.4038784 L15.1900068,4.62555888 Z"
                                  transform="translate(12.008026, 12.403806) scale(-1, 1) rotate(-90.000000) translate(-12.008026, -12.403806)"
                                />
                              </g>
                            </g>
                          </svg>
                        </span>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </span>
    </span>
  </body>
</html>
`;

exports[`Design System/TopNavBar WithDarkThemeEnabled smoke-test 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  background-color: black;
  height: 3.875rem;
  padding: 0 1rem;
  box-shadow: 0px 4px 8px rgba(16, 48, 102, 0.07);
}

.emotion-2>*:not(:last-of-type) {
  color: white;
}

.emotion-3 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-4 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: transparent;
  margin: 1rem 1.5rem 1rem 1rem;
  border-radius: 0.25rem;
  max-width: 25rem;
}

.emotion-5 {
  margin: auto;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: default;
}

.emotion-6 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  margin: 0 1rem;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.emotion-7 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-8 {
  position: relative;
  display: inline-block;
}

.emotion-9 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-10 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #1552DD;
  background-color: rgba(84,94,255,0);
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-10:focus-visible:not(:disabled) {
  background-color: rgba(84,94,255,0.06);
}

.emotion-10:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-10:hover:not(:disabled) {
  background-color: rgba(84,94,255,0.06);
}

.emotion-10:active:not(:disabled) {
  background-color: rgba(84,94,255,0.14);
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 0.5rem;
}

.emotion-12 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1.25rem;
  height: 1.25rem;
  border-radius: 6.25rem;
  border: 0.0625rem solid;
  border-color: #b9cdfc;
  box-sizing: border-box;
  background-color: #e7eefe;
  color: #1249C4;
  overflow: hidden;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-family: Roboto;
  font-weight: 500;
  line-height: 0.875rem;
  font-size: 0.625rem;
  letter-spacing: 0.00625rem;
}

.emotion-12 img {
  border-radius: 6.25rem;
  width: 100%;
  height: 100%;
}

.emotion-13 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-14 {
  fill: #1249C4;
  width: 1rem;
  height: 1rem;
}

.emotion-14 path {
  fill: #1249C4;
}

.emotion-15 {
  font-weight: 500;
}

.emotion-17 {
  fill: #1552DD;
  width: 1rem;
  height: 1rem;
}

.emotion-17 path {
  fill: #1552DD;
}

<html>
  <head />
  <body>
    <span
      class="emotion-0"
    >
      <span
        class="emotion-1"
      >
        <div
          style="padding: 10px;"
        >
          <div
            aria-label="Top Application Banner"
            class="emotion-2"
            role="banner"
          >
            <div
              class="emotion-3"
            >
              <div
                class="emotion-4"
              >
                <div
                  class="emotion-5"
                >
                  <strong>
                    LOGO
                  </strong>
                  PLACEHOLDER
                </div>
              </div>
            </div>
            <div
              class="emotion-6"
            />
            <div
              class="emotion-7"
            >
              <div>
                <div
                  class="emotion-8"
                  data-testid="userMenu"
                >
                  <div
                    class="emotion-9"
                  >
                    <button
                      class="emotion-10"
                      data-testid="button"
                      type="button"
                    >
                      <span
                        class="emotion-11"
                      >
                        <div
                          class="emotion-12"
                          data-testid="_avatar"
                        >
                          <span
                            class="emotion-13"
                          >
                            <svg
                              class="emotion-14"
                              fill="none"
                              viewBox="0 0 14 17"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M6.96625 6.55647C8.77677 6.55647 10.2445 5.08876 10.2445 3.27824C10.2445 1.46772 8.77677 0 6.96625 0C5.15573 0 3.68801 1.46772 3.68801 3.27824C3.68801 5.08876 5.15573 6.55647 6.96625 6.55647Z"
                                fill="#54587F"
                              />
                              <path
                                d="M0 12.2113C0 12.1401 0.0171683 12.0699 0.0515269 12.0076C1.31285 9.7198 3.95046 8.09435 7 8.09435C10.0495 8.09435 12.6872 9.7198 13.9485 12.0076C13.9828 12.0699 14 12.1401 14 12.2113C14 12.2824 13.9828 12.3528 13.9483 12.4151C12.687 14.6941 10.0518 16.0044 7.00244 16.0044C3.95304 16.0044 1.31314 14.6941 0.0516988 12.4151C0.0172363 12.3528 0 12.2824 0 12.2113Z"
                                fill="#54587F"
                              />
                            </svg>
                          </span>
                        </div>
                        <span>
                          <span>
                            <span
                              class="emotion-15"
                            />
                          </span>
                        </span>
                        <span
                          class="emotion-13"
                        >
                          <svg
                            class="emotion-17"
                            viewBox="0 0 24 24"
                            xmlns="http://www.w3.org/2000/svg"
                            xmlns:xlink="http://www.w3.org/1999/xlink"
                          >
                            <g
                              fill="none"
                              fill-rule="evenodd"
                              id="\\uD83D\\uDD36-Symbols"
                              stroke="none"
                              stroke-width="1"
                            >
                              <g
                                id="Chevron_Large_Down"
                              >
                                <path
                                  d="M15.1900068,4.62555888 L16.6042204,6.03977245 L10.2398322,12.4035589 L16.6042204,18.7678394 L15.1900068,20.182053 L7.41183221,12.4038784 L15.1900068,4.62555888 Z"
                                  transform="translate(12.008026, 12.403806) scale(-1, 1) rotate(-90.000000) translate(-12.008026, -12.403806)"
                                />
                              </g>
                            </g>
                          </svg>
                        </span>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </span>
    </span>
  </body>
</html>
`;

exports[`Design System/TopNavBar WithLogoPlaceholder smoke-test 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  background-color: white;
  height: 3.875rem;
  padding: 0 1rem;
  box-shadow: 0px 4px 8px rgba(16, 48, 102, 0.07);
}

.emotion-2>*:not(:last-of-type) {
  color: #0f0f17;
}

.emotion-3 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-4 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: transparent;
  margin: 1rem 1.5rem 1rem 1rem;
  border-radius: 0.25rem;
  max-width: 25rem;
}

.emotion-5 {
  margin: auto;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: default;
}

.emotion-6 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  margin: 0 1rem;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.emotion-7 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-8 {
  position: relative;
  display: inline-block;
}

.emotion-9 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-10 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #1552DD;
  background-color: rgba(84,94,255,0);
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-10:focus-visible:not(:disabled) {
  background-color: rgba(84,94,255,0.06);
}

.emotion-10:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-10:hover:not(:disabled) {
  background-color: rgba(84,94,255,0.06);
}

.emotion-10:active:not(:disabled) {
  background-color: rgba(84,94,255,0.14);
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 0.5rem;
}

.emotion-12 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1.25rem;
  height: 1.25rem;
  border-radius: 6.25rem;
  border: 0.0625rem solid;
  border-color: #b9cdfc;
  box-sizing: border-box;
  background-color: #e7eefe;
  color: #1249C4;
  overflow: hidden;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-family: Roboto;
  font-weight: 500;
  line-height: 0.875rem;
  font-size: 0.625rem;
  letter-spacing: 0.00625rem;
}

.emotion-12 img {
  border-radius: 6.25rem;
  width: 100%;
  height: 100%;
}

.emotion-13 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-14 {
  fill: #1249C4;
  width: 1rem;
  height: 1rem;
}

.emotion-14 path {
  fill: #1249C4;
}

.emotion-15 {
  font-weight: 500;
}

.emotion-17 {
  fill: #1552DD;
  width: 1rem;
  height: 1rem;
}

.emotion-17 path {
  fill: #1552DD;
}

<html>
  <head />
  <body>
    <span
      class="emotion-0"
    >
      <span
        class="emotion-1"
      >
        <div
          style="padding: 10px;"
        >
          <div
            aria-label="Top Application Banner"
            class="emotion-2"
            role="banner"
          >
            <div
              class="emotion-3"
            >
              <div
                class="emotion-4"
              >
                <div
                  class="emotion-5"
                >
                  <strong>
                    LOGO
                  </strong>
                  PLACEHOLDER
                </div>
              </div>
            </div>
            <div
              class="emotion-6"
            />
            <div
              class="emotion-7"
            >
              <div>
                <div
                  class="emotion-8"
                  data-testid="userMenu"
                >
                  <div
                    class="emotion-9"
                  >
                    <button
                      class="emotion-10"
                      data-testid="button"
                      type="button"
                    >
                      <span
                        class="emotion-11"
                      >
                        <div
                          class="emotion-12"
                          data-testid="_avatar"
                        >
                          <span
                            class="emotion-13"
                          >
                            <svg
                              class="emotion-14"
                              fill="none"
                              viewBox="0 0 14 17"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M6.96625 6.55647C8.77677 6.55647 10.2445 5.08876 10.2445 3.27824C10.2445 1.46772 8.77677 0 6.96625 0C5.15573 0 3.68801 1.46772 3.68801 3.27824C3.68801 5.08876 5.15573 6.55647 6.96625 6.55647Z"
                                fill="#54587F"
                              />
                              <path
                                d="M0 12.2113C0 12.1401 0.0171683 12.0699 0.0515269 12.0076C1.31285 9.7198 3.95046 8.09435 7 8.09435C10.0495 8.09435 12.6872 9.7198 13.9485 12.0076C13.9828 12.0699 14 12.1401 14 12.2113C14 12.2824 13.9828 12.3528 13.9483 12.4151C12.687 14.6941 10.0518 16.0044 7.00244 16.0044C3.95304 16.0044 1.31314 14.6941 0.0516988 12.4151C0.0172363 12.3528 0 12.2824 0 12.2113Z"
                                fill="#54587F"
                              />
                            </svg>
                          </span>
                        </div>
                        <span>
                          <span>
                            <span
                              class="emotion-15"
                            />
                          </span>
                        </span>
                        <span
                          class="emotion-13"
                        >
                          <svg
                            class="emotion-17"
                            viewBox="0 0 24 24"
                            xmlns="http://www.w3.org/2000/svg"
                            xmlns:xlink="http://www.w3.org/1999/xlink"
                          >
                            <g
                              fill="none"
                              fill-rule="evenodd"
                              id="\\uD83D\\uDD36-Symbols"
                              stroke="none"
                              stroke-width="1"
                            >
                              <g
                                id="Chevron_Large_Down"
                              >
                                <path
                                  d="M15.1900068,4.62555888 L16.6042204,6.03977245 L10.2398322,12.4035589 L16.6042204,18.7678394 L15.1900068,20.182053 L7.41183221,12.4038784 L15.1900068,4.62555888 Z"
                                  transform="translate(12.008026, 12.403806) scale(-1, 1) rotate(-90.000000) translate(-12.008026, -12.403806)"
                                />
                              </g>
                            </g>
                          </svg>
                        </span>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </span>
    </span>
  </body>
</html>
`;
